# ucrt

./: .gitignore  CMakeLists.txt  README.md
shims/: corecrt_internal_ptd_propagation.h  corecrt_internal_state_isolation.h  math.c  nt.h  shims.cpp
test_apps/file_process/: file_process.cpp
